added age-calcultor project

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,8 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: "Poppins-Regular";
+  src: url("../../public/assets/fonts/Poppins-Regular.ttf");
+}
